--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<main style="display: contents">
+		<div style="display: contents">
 			%sveltekit.body%
-		</main>
-
+		</div>
 	</body>
 </html>
